# RESTful-API-Audio-

./: .gitignore  README.md  pyproject.toml  server.csr  server.key.org
docker/redis/: docker-compose.yml
docker/redis/config/: redis.conf
src/webservice/: .env  app.py
src/webservice/api/routes/: api.py  ping.py
src/webservice/api/routes/nn/: api.py  cnn_1.py  ctc_1.py  mlp_1.py
src/webservice/core/: config.py  logging.py
src/webservice/crets/: ca.crt  ca.key  ca.srl  host.crt  host.csr  host.key
src/webservice/nn/: .env  model_1.py  model_ctc.py  testredis.py
src/webservice/nn_model/: ctc.h5  ctc.json  model_1.json  model_2.h5  model_2.json
src/webservice/utils/: preprocessor.py
tests/: test_webservice.py
